src/scss/_main.scss
@import "tokens";

body {
    background: rgb(98,0,238);
    background: linear-gradient(120deg, rgba(98,0,238,1) 50%, rgba(250,25,138,1) 100%);
    padding: 1rem 1rem 0;
    color: #fff;
    min-height: 100vh;
}

header, main {
    display: flex;
    align-items: flex-start;
}
header {
    grid-area: header;
    justify-content: space-between;
    h1 {
        text-align: center;
        color: #fff;
    }
}

main {
    grid-area: main;
    flex-direction: column;
    justify-content: center;
    max-width: 42rem;
    margin-top: 1rem;
    min-width: 0;
    h1,h2,h3 {
        color: $color--white;
        margin-top: 1rem;
        font-family: $font-family--mono;
    }
}

footer {
    grid-area: footer;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    margin-top: 2rem;
    font-size: .75rem;
}

.app {
    display: grid;
    height: calc(100vh - 60px);
    grid-template-areas:
        "header"
        "main"
        "footer";
    grid-template-rows: 48px auto 96px;
    max-width: 1216px;
    margin: 0 auto;
}

@media (min-width: 480px) {
    .app {
        padding: 2rem;
    }
}

.container {
    max-width: 42rem;
    margin-right: auto;
    margin-left: auto;
}

